<resources>
    <string name="app_name">Uplants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello1">Добро пожаловать</string>
    <string name="hello2">в UPlants</string>
    <string name="hello3">Давайте немного расскажем</string>
    <string name="hello4">о наших основных фунциях</string>
    <string name="next">Далее</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello5">Ухаживать за растениями</string>
    <string name="hello6">никогда не было так просто</string>
    <string name="hello7">Удобный и практичный помощник</string>
    <string name="hello8">по уходу за растениями</string>
    <string name="hello9">Удобный справочник</string>
    <string name="hello10">по уходу за зелёными друзьями</string>
    <string name="hello11">В базе более 140 видов,</string>
    <string name="hello12">быстро находится нужное растение</string>
    <string name="hello13">и информация по уходу за ним</string>
    <string name="email">Введите ваш email</string>
    <string name="example_gmai">example@gmai.com</string>
    <string name="password">Пароль</string>
    <string name="InputPassword">Введите пароль</string>
    <string name="Enter">Войти</string>
    <string name="new_ac">Новый пользователь?</string>
    <string name="create_ac"><u>Создать аккаунт</u></string>
    <string name="Continue">Продолжить</string>
    <string name="registercode">Введите код подтверждения</string>
    <string name="code">1234</string>
    <string name="newpassword">Придумайте пароль</string>
    <string name="acceptpasswod">Подтвердите пароль</string>
    <string name="pozdr">Поздравляем!</string>
    <string name="registration">Регистрация прошла успешно!</string>
    <string name="spravochnik">Спаравочник</string>
    <string name="search">Поиск по названию</string>
    <string name="ilistv">лиственные</string>
    <string name="decor">Декоративно-</string>
    <string name="kras">Красиво-</string>
    <string name="cvet">цветущие</string>
    <string name="allplants">Все растения</string>
    <string name="plod">плодовые</string>
    <string name="suk">Суккуленты и</string>
    <string name="kaktus">кактусы</string>
    <string name="search1">Поиск растений</string>
    <string name="predl">Предложить новое</string>
    <string name="rast">растение</string>
    <string name="aglaonema">Аглаонема</string>
    <string name="zam">Заметки по уходу</string>
    <string name="zametki">Заметки</string>
    <string name="send">Отправить</string>
    <string name="sendmessage">Ваше предложение отправлено!</string>
    <string name="myclants">Мои растения</string>
    <string name="add">Добавить</string>
    <string name="sent_code"><u>Отправить код ещё раз</u></string>
    <string name="pasta">Удобрение</string>
    <string name="pizza">Пересадка</string>
    <string name="stores">Полив</string>
    <string name="home">Описание</string>
    <string name="napom">Напоминания</string>
    <string name="moment">Моменты</string>
    <string name="vecher">Вечер</string>
    <string name="razmnozhenie">Размножение</string>
    <string name="obrezka">Обрезка</string>
    <string name="zashita">Защита</string>
    <string name="svet">Освещение</string>
    <string name="temp">Температурный режим</string>
    <string name="vlazh">Влажность</string>
    <string name="zadanya">Задания</string>
    <string name="udobr">Удобрение</string>
</resources>